<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true" >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/textViewLabelLat"
            android:padding="3dp"
            android:text="@string/lat"/>
        <EditText
            android:id="@+id/editTextLat"
            android:padding="3dp" />

        <ImageButton
            android:id="@+id/buttonClearLat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@android:drawable/ic_input_delete" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/textViewLabelLon"
            android:padding="3dp"
            android:text="@string/lon"/>
        <EditText
            android:id="@+id/editTextLon"
            android:padding="3dp" />

        <ImageButton
            android:id="@+id/buttonClearLon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@android:drawable/ic_input_delete" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/textViewLabelDescription"
            android:padding="3dp"
            android:text="@string/desc"/>
        <EditText
            android:id="@+id/editTextDescription"
            android:padding="3dp" />
        <ImageButton
            android:id="@+id/buttonClearDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@android:drawable/ic_input_delete" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/buttonLookupGeodata"
            android:text="@string/lookup_geodata" />
    </TableRow>

</TableLayout>
